--- a/client/src/components/UserForm/UserForm.css
+++ b/client/src/components/UserForm/UserForm.css
@@ -153,7 +153,7 @@
   font-size: 1rem;
   transition: all 0.3s ease;
   box-sizing: border-box;
-  height: 48px;
+  height: 100%;
   font-weight: 400;
   background-color: white;
 }
